--- a/style.css
+++ b/style.css
@@ -11,13 +11,13 @@
 .content {
     position: fixed;
     bottom: 0;
-    background: rgba(0, 222, 230, 0.459)5);
+    background: rgba(0, 222, 230, 0.459);
     color: #f1f1f1;
     width: 100%;
     padding: 20px;
-  }
+}
 
-  #myBtn {
+#myBtn {
     width: 200px;
     font-size: 18px;
     padding: 10px;
@@ -26,9 +26,11 @@
     color: #fff;
     cursor: pointer;
     float: right;
-  }
-  #myBtn:hover {
+}
+
+#myBtn:hover {
     background: #ddd;
     color: black;
-  }  
-  #mapid { height: 180px; }
+}
+
+#mapid { height: 180px;}
